--- a/manga.html
+++ b/manga.html
@@ -95,7 +95,7 @@
       <!--Seidou-->
       <div class="art-display">
         <div class="half-image">
-          <img src="https://puu.sh/uOxwD/c7e1a1c682.png">
+          <img src="https://66.media.tumblr.com/a41d29f2b436c64ed9c2d0d690895ad0/tumblr_plgd0eA6Jw1tmp8rdo2_r1_540.jpg">
           <img src="https://media.giphy.com/media/3o7btYkQNdWEOfDLwc/source.gif">
         </div>
       </div>
