--- a/manga.html
+++ b/manga.html
@@ -134,6 +134,17 @@
         </div>
       </div>
 
+       <div class="art-display">
+        <div class="half-image">
+          <img src="https://66.media.tumblr.com/322be6cb3cf87ae28b37bb8f6e8220c5/tumblr_plgd0eA6Jw1tmp8rdo3_r1_540.png">
+      </div></div>
+
+      <div class="art-display">
+        <div class="quarter-image">
+          <img src="https://media.giphy.com/media/3oEduJqJq94umnriyA/giphy.gif">
+        </div></div>
+
+
       <div class="art-display">
         <div class="half-image">
           <img src="https://66.media.tumblr.com/e6b5f2c77f1fef9d9caeedecb653b371/tumblr_pitsk0uLcD1tmp8rdo9_r1_1280.png">
@@ -142,6 +153,79 @@
       </div>
       <hr>
     </div>
+
+
+    <div id="content">
+      <!-- GIFs -->
+      <div class="art-section">
+        <div class="art-header">
+          <p>Not necessarily motion manga/art, but fall under the "editing pre-existing content" umbrella. Anime GIFs that are edited with After Effects to add in my own flair.  Just for fun!</p>
+        </div>
+        <div class="art-display">
+          <div class="half-image">
+            <img src="https://66.media.tumblr.com/186a16cb5ba8a93090a7d1553e496538/tumblr_ogjv43AUlA1tmp8rdo3_r2_500.gif">
+            <img src="https://66.media.tumblr.com/8e9690f3247f99d019ae73e1553ebf54/tumblr_ogjv43AUlA1tmp8rdo4_r1_500.gif">
+            <img src="https://66.media.tumblr.com/227dcbb35e64797dfc1c63df77cb2e77/tumblr_ogjv43AUlA1tmp8rdo2_r2_500.gif">
+          </div>
+        </div>
+
+        <div class="art-display">
+          <div class="half-image">
+            <img src="https://66.media.tumblr.com/593b9c304a3dfdc494358d55b95d48fc/tumblr_oh26qeKUo91tmp8rdo3_500.gif">
+            <img src="https://66.media.tumblr.com/696e524d41f0ca84ba5e71a94aff88c5/tumblr_oh26qeKUo91tmp8rdo2_500.gif">
+            <img src="https://66.media.tumblr.com/da2a2469c7a97bd5cf22ee627b0adb65/tumblr_oh26qeKUo91tmp8rdo1_r1_500.gif">
+          </div>
+        </div>
+        
+        <div class="art-display">
+          <div class="half-image">
+            <img src="https://66.media.tumblr.com/59fa3aabc2342e11afe093adac3b100f/tumblr_ogioqzhUIC1tmp8rdo4_r2_500.gif">
+            <img src="https://66.media.tumblr.com/1fb146c32f8010187b40d081ff3c913e/tumblr_ogioqzhUIC1tmp8rdo2_r1_500.gif">
+            <img src="https://66.media.tumblr.com/9b82390d768596c5febcdf1d16b0033c/tumblr_ogioqzhUIC1tmp8rdo3_r2_500.gif">
+          </div>
+        </div>
+
+    <div id="content">
+      <!-- Silly Stuff -->
+      <div class="art-section">
+        <div class="art-header">
+          <p>Just to be silly, I've done crossovers mixing together anime. I took One Punch Man and crossed it over with the Persona 4 anime intermission (lots of rotoscoping and re-creating animation involved).</p>
+        </div>
+        <div class="art-display">
+          <div class="half-image">
+              <img src="https://66.media.tumblr.com/02fddfd33435cf8e759a1e3306485b20/tumblr_o6sklbbcB31tmp8rdo2_500.gif">
+            <img src="https://66.media.tumblr.com/fd2f3340910178fde5e6fd3811067a4a/tumblr_o6sklbbcB31tmp8rdo1_r1_500.gif">
+            <img src="https://66.media.tumblr.com/3639908ab223b9f4ea832ae73363adfc/tumblr_o6sklbbcB31tmp8rdo3_500.gif">
+          </div>
+        </div>
+
+        <div class="art-header">
+            <p>Original:</p>
+          </div>
+          <div class="art-display">
+            <div class="half-image">
+              <img src="https://66.media.tumblr.com/b11f15d681844c8a90036e4f530f50b2/tumblr_nt4ux4rudj1tmp8rdo8_r1_250.gif">
+              <img src="https://66.media.tumblr.com/b9ae6fa2fab300c60dd9d36df48e9228/tumblr_nt4ux4rudj1tmp8rdo3_r2_250.gif">
+              <img src="https://66.media.tumblr.com/14b62c9393a0b4a9c5702ad3bf3ee564/tumblr_nt4ux4rudj1tmp8rdo5_r1_250.gif">
+            </div>
+          </div>
+
+
+
+        <div class="art-header">
+          <p>I also took the first 15 seconds of the <a class="active-link" target="_blank" href="https://www.youtube.com/watch?v=_ty-Nqm4Pdc">Bleach season 1 opening</a> and did a crossover with Tokyo Ghoul.</p>
+        </div>
+        <div class="art-display">
+          <div class="half-image">
+            <img src="https://66.media.tumblr.com/fcfd148192486c4b7cd0f5f50955fb71/tumblr_njyuklRHbl1tmp8rdo5_r2_500.gif">
+            <img src="https://66.media.tumblr.com/c68b535b689cfc2eb139cdf892d9db22/tumblr_njyuklRHbl1tmp8rdo4_r1_500.gif">
+            <img src="https://66.media.tumblr.com/86c0e8fa8c7a007d67ccba92df74fdcc/tumblr_njyuklRHbl1tmp8rdo2_r3_500.gif">
+            <img src="https://66.media.tumblr.com/27f4bf6f24edc5ccf8218c7a8c4ad05f/tumblr_njyuklRHbl1tmp8rdo1_r1_500.gif">
+          </div>
+        </div>
+
+
+
   </div>
 
 </body>
