--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
      <div class="item">
       <a href="manga.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/DCWHrUm3WEGpNWN0RO/giphy.gif" alt="motion manga"></div>
-        <span>Motion Manga (for fun!)</span>
+        <span>Motion Manga, Art, and GIFs (for fun!)</span>
       </a>
     </div>
     <div class="item">
