--- a/ads.html
+++ b/ads.html
@@ -62,7 +62,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Snipes</h2>
-        <p>Snipes are branded video graphics that appear for a few seconds on the bottom left corner of a video to showcase who is sponsoring it.</p>
+        <p>Snipes are branded video graphics that appear for a few seconds on the bottom left corner of a video to showcase who is sponsoring it.  Note that I cannot edit established branding, such as the red header.</p>
       </div>
       <div class="art-display">
         <!--Row 1-->
@@ -201,6 +201,25 @@
       </div>
     </div>
 
+    <div class="art-section">
+        <div class="art-header">
+          <h2>END CARDS</h2>
+          <p>Sponsored end cards for Instagram and Facebook posts.</p>
+        </div>
+        <div class="art-display">
+          <!--Row 1-->
+          <div class="quarter-image loading-icon">
+            <img src="https://66.media.tumblr.com/ae9451066448dc5b6f592ee7893e1022/tumblr_plgd0eA6Jw1tmp8rdo6_r1_500.jpg">
+          </div>
+          <div class="quarter-image loading-icon">
+            <img src="https://66.media.tumblr.com/922853d899c3d3705a413f5861621622/tumblr_plgd0eA6Jw1tmp8rdo4_r1_500.jpg">
+          </div>
+          <div class="quarter-image loading-icon">
+            <img src="https://66.media.tumblr.com/1015d2f6935b374738332923d22bfa98/tumblr_plgd0eA6Jw1tmp8rdo5_r1_250.jpg">
+          </div>
+        </div>
+
+
     <!-- Section 4 -->
     <div class="art-section">
       <div class="art-header">
@@ -236,6 +255,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>RETAIL MODULES</h2>
+        <p>Note that I cannot edit established branding, such as the red areas.</p>
       </div>
       <div class="art-display">
         <!--Row 1-->
@@ -252,6 +272,7 @@
           <img src="https://66.media.tumblr.com/9ec77b4892c0e01622d26148dfeb79dd/tumblr_pj17etb3MV1tmp8rdo1_400.jpg">
         </div>
       </div>
+
       <hr>
     </div>
   </div>
