--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
       </a>
     </div>
     <div class="item">
-      <a href="strive-for-five.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/2hgs0uUv9d3o6eb13e/giphy.gif" alt="strive for five challenge"></div>
-        <span>Strive for Five Challenge</span>
-      </a>
-    </div>
+        <a href="ads.html">
+          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/BWigEIB18I5wdEFxPR/giphy.gif" alt="e3 booth monitors"></div>
+          <span>Advertisements for IGN</span>
+        </a>
+      </div>
     <div class="item">
       <a href="roadblock.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/6w3ByAo8ewzUm1wPOx/giphy.gif" alt="e3 booth monitors"></div>
@@ -103,11 +103,11 @@
       </a>
     </div>
     <div class="item">
-      <a href="behind-the-cosplay.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/1zkb1tLwY0hZjnEPDy/giphy.gif" alt="behind the cosplay"></div>
-        <span>Behind the Cosplay - IGN Video Series</span>
-      </a>
-    </div>
+        <a href="strive-for-five.html">
+          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/2hgs0uUv9d3o6eb13e/giphy.gif" alt="strive for five challenge"></div>
+          <span>Strive for Five Challenge</span>
+        </a>
+      </div>
 
     <!-- Row 4 -->
     <div class="item">
@@ -117,17 +117,34 @@
       </a>
     </div>
     <div class="item">
-      <a href="god-of-war.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/wofsoE6de9uiCO6ykV/giphy.gif" alt="god of war"></div>
-        <span>God of War - IGN Campaign</span>
-      </a>
-    </div>
+        <a href="behind-the-cosplay.html">
+          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/1zkb1tLwY0hZjnEPDy/giphy.gif" alt="behind the cosplay"></div>
+          <span>Behind the Cosplay - IGN Video Series</span>
+        </a>
+      </div>
     <div class="item">
       <a href="dailyui.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/3JNGTvPcbHtMHKu6MH/giphy.gif" alt="behind the cosplay IGN video series"></div>
         <span>DailyUI [Web & Mobile UI]</span>
       </a>
     </div>
+
+     <!-- Row 5 -->
+     <div class="item">
+        <a href="miniscroller.html">
+          <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/34894daaa0da6c23c82f7e632d6a8d9f/tumblr_piziu5dhLr1tmp8rdo7_r2_400.png" alt="motion manga"></div>
+          <span>Miniscrollers</span>
+        </a>
+      </div>
+      <div class="item">
+          <a href="god-of-war.html">
+            <div class="image-container loading-icon"><img src="https://media.giphy.com/media/wofsoE6de9uiCO6ykV/giphy.gif" alt="god of war"></div>
+            <span>God of War - IGN Campaign</span>
+          </a>
+        </div>
+      
+
+
   </div>
 
 </body>
