--- a/miniscroller.html
+++ b/miniscroller.html
@@ -60,17 +60,17 @@
         <div class="quarter-image loading-icon">
           Okami HD
           <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/a94d9c05">
-          <img src="https://66.media.tumblr.com/ef3742865aa7bcc6d0326aa54985227e/tumblr_pje6cjXHWJ1tmp8rdo9_640.jpg"></a>
+          <img src="https://66.media.tumblr.com/225b3692bd706bc10d8ad3243e5f2a45/tumblr_pm6269TZqH1tmp8rdo9_640.png"></a>
         </div>
         <div class="quarter-image loading-icon">
           Dead Rising 4
           <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/7c0ba337">
-          <img src="https://66.media.tumblr.com/5e7016fc459b6f65898b1a3a0a2b4610/tumblr_pje6cjXHWJ1tmp8rdo8_640.jpg"></a>
+          <img src="https://66.media.tumblr.com/e2eeb432f78c78217adfec6fb8f81ac4/tumblr_pm6269TZqH1tmp8rdo8_640.png"></a>
         </div>
         <div class="quarter-image loading-icon">
             Fortnite Launch
             <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/ee239208">
-            <img src="https://66.media.tumblr.com/b76de98cd1fd1588a5be3b0cdcc5ebdb/tumblr_pje6cjXHWJ1tmp8rdo5_540.png"></a>
+            <img src="https://66.media.tumblr.com/67977c3b96dac6253b72aeafdb727213/tumblr_pm6269TZqH1tmp8rdo5_540.png"></a>
           </div>
       </div>
     </div>
@@ -81,16 +81,16 @@
         <div class="quarter-image loading-icon">
           HP Omen ft. Biofrost
           <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/3891e1fb">
-          <img src="https://66.media.tumblr.com/72f62e329c53c608f3620e509d0af9e3/tumblr_pje6cjXHWJ1tmp8rdo6_640.png"></a>
+          <img src="https://66.media.tumblr.com/d1e4b23c1f42a4120e57128d2224e9a9/tumblr_pm6269TZqH1tmp8rdo6_640.png"></a>
         </div>
         <div class="quarter-image loading-icon">
           GameStop: Fall Titles
           <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/d359c7a8">
-          <img src="https://66.media.tumblr.com/ca37e1173322fa7700601416ea31da18/tumblr_pje6cjXHWJ1tmp8rdo2_640.png"></a>
+          <img src="https://66.media.tumblr.com/e5c434aea53f42ba7352c9e6fc6946e0/tumblr_pm6269TZqH1tmp8rdo3_640.png"></a>
         </div>
         <div class="quarter-image loading-icon">
-          Best Buy: Dell Computing
-          <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/79022f34"><img src="https://66.media.tumblr.com/90c164177bc6c63378365fe44c26db3a/tumblr_pje6cjXHWJ1tmp8rdo3_640.png"></a>
+          Best Buy: Winter Deals
+          <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/79022f34"><img src="https://66.media.tumblr.com/ca4e8b73ec68bf98bf5bb93289fba482/tumblr_pm6269TZqH1tmp8rdo4_640.png"></a>
         </div>
       </div>
     </div>
@@ -102,15 +102,15 @@
         <div class="quarter-image loading-icon">
           HP: September Gaming
           <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/783063ec">
-          <img src="https://66.media.tumblr.com/ee37de82fb94cedbaf1aed902b2971af/tumblr_pje6cjXHWJ1tmp8rdo1_640.png"></a>
+          <img src="https://66.media.tumblr.com/5e929f668590fcf2a0a8cbd0c0ba07d0/tumblr_pm6269TZqH1tmp8rdo2_640.png"></a>
         </div>
         <div class="quarter-image loading-icon">
             Resident Evil
-            <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/94340d38"><img src="https://66.media.tumblr.com/9e916ef4c490d23f1acd391032c16d8e/tumblr_pje6cjXHWJ1tmp8rdo7_640.png"></a>
+            <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/94340d38"><img src="https://66.media.tumblr.com/b0e3102331fbceddb4785ed81740d22e/tumblr_pm6269TZqH1tmp8rdo7_640.png"></a>
           </div>
         <div class="quarter-image loading-icon">
           Best Buy: Dell Computing
-          <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/d913da5c"><img src="https://66.media.tumblr.com/a9080fb6a58582400430910c6a4e1046/tumblr_pje6cjXHWJ1tmp8rdo4_640.png"></a>
+          <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/d913da5c"><img src="https://66.media.tumblr.com/7106e4dfa86949ccc701ec0fd8f53958/tumblr_pm6269TZqH1tmp8rdo1_640.png"></a>
         </div>
       </div>
     </div>
