--- a/ads.html
+++ b/ads.html
@@ -61,7 +61,7 @@
     <!-- Section 2 -->
     <div class="art-section">
       <div class="art-header">
-        <h2>MONITOR GRAPHICS</h2>
+        <h2>MONITOR / SET GRAPHICS</h2>
         <p>Sponsor branded graphics for IGN livestreams and convention sets.
           Please note that some assets were made by other designers in collaboration, such as logos.</p>
       </div>
@@ -69,6 +69,9 @@
         <!--Row 1-->
         <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/0d66ff450306881a52866774f373bd60/tumblr_pj19b9EUTD1tmp8rdo5_r1_1280.jpg">
+          <video width="100%" autoplay muted loop>
+              <source src="https://puu.sh/CHl8S.mp4" type="video/mp4">
+            </video>
         </div>
         <!--Row 2-->
         <div class="full-image loading-icon">
