--- a/microsite.html
+++ b/microsite.html
@@ -53,7 +53,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Microsites</h2>
-        <p>Microsites are typically sponsored webpages hosted on IGN that promote a contest, sweepstakes, or a new series. Due to using Shortstack to build these out, I am limited in how much I can design.</p>
+        <p>Microsites are sponsor branded webpages hosted on IGN that promote a contest, sweepstakes, or a new series. Due to using Shortstack to build these out, note that I am limited in how much I can design.</p>
         <br>
         <p>Below are some microsites I have worked on along with any live links to view them.</p>
         <br>
