btc episode slate

--- a/behind-the-cosplay.html
+++ b/behind-the-cosplay.html
@@ -89,7 +89,9 @@
           <p>Episode title that appears after the logo animation.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/BmCDC/a965eedcd6.gif">
+          <video width="100%" autoplay muted loop>
+            <source src="https://puu.sh/CHNQJ.mp4" type="video/mp4">
+          </video>
         </div>
         <!-- Row 3 -->
         <div class="art-sub-header">
