--- a/roadblock.html
+++ b/roadblock.html
@@ -83,7 +83,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Diablo III on Switch - Blizzard</h2>
-        <p><a class="active-link" target="_blank" href="https://puu.sh/C9m9U/a7a9313621.mp4">Autoplay video</a></p>
+        <p><a class="active-link" target="_blank" href="https://www.ign.com/?special=diablo3">Autoplay video</a></p>
       </div>
       <div class="art-display">
         <!-- Row 1 -->
@@ -97,6 +97,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Fallout 76 - Bethesda</h2>
+        <p><a class="active-link" target="_blank" href="http://adtools.ign.com/special/?id=fallout76-hprb">View the roadblock here</a></p>
       </div>
       <div class="art-display">
         <!-- Row 1 -->
