--- a/ads.html
+++ b/ads.html
@@ -88,7 +88,7 @@
           <img src="https://66.media.tumblr.com/52dfde14fa12b38198f1f45a292f11d5/tumblr_pj17etb3MV1tmp8rdo5_r1_500.jpg">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://66.media.tumblr.com/098a56c567e848c270ca04487abe848c/tumblr_pj17etb3MV1tmp8rdo6_r1_500.jpg">
+          <img src="https://66.media.tumblr.com/e2f0d6a69200d895b17981031aec0a75/tumblr_pn73tiAN3l1tmp8rdo2_1280.png">
         </div>
         <!--Row 4-->
         <div class="half-image loading-icon">
