--- a/ads.html
+++ b/ads.html
@@ -301,7 +301,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>RETAIL MODULES</h2>
-        <p>Note that I cannot edit established branding, such as the red areas.</p>
+        <p>Click through ads that appear on the side of article pages.  Note that I cannot edit established branding, such as the red areas.</p>
       </div>
       <div class="art-display">
         <!--Row 1-->
