--- a/roadblock.html
+++ b/roadblock.html
@@ -74,7 +74,7 @@
       <div class="art-display">
         <!-- Row 1 -->
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/C8OsN.png">
+          <img src="https://i.imgur.com/RYwpjSH.png">
         </div>
       </div>
     </div>
@@ -88,12 +88,26 @@
       <div class="art-display">
         <!-- Row 1 -->
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/C9fJ8/bfa7f2171a.png">
+          <img src="https://i.imgur.com/NOVrrdF.png">
         </div>
       </div>
     </div>
 
-    <!-- Section 4 -->
+  <!-- Section 4 -->
+  <div class="art-section">
+    <div class="art-header">
+      <h2>Anthem - EA</h2>
+      <p><a class="active-link" target="_blank" href="https://www.ign.com/?special=anthem">Permalink</a></p>
+    </div>
+    <div class="art-display">
+      <!-- Row 1 -->
+      <div class="full-image loading-icon">
+        <img src="https://i.imgur.com/KO4SZaB.jpg">
+      </div>
+    </div>
+  </div>
+    
+    <!-- Section 5 -->
     <div class="art-section">
       <div class="art-header">
         <h2>Fallout 76 - Bethesda</h2>
@@ -102,12 +116,12 @@
       <div class="art-display">
         <!-- Row 1 -->
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/C9fqu/687096ed8c.png">
+          <img src="https://i.imgur.com/Q1pRs4R.png">
         </div>
       </div>
     </div>
 
-    <!-- Section 5 -->
+    <!-- Section 6 -->
     <div class="art-section">
       <div class="art-header">
         <h2>Assassin's Creed Odyssey - Ubisoft</h2>
@@ -115,12 +129,26 @@
       <div class="art-display">
         <!-- Row 1 -->
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/C9glz/ab59f79095.png">
+          <img src="https://66.media.tumblr.com/a9fba648c49fcf8010b11ef01668899a/tumblr_pn73tiAN3l1tmp8rdo5_r1_1280.png">
         </div>
       </div>
     </div>
 
-    <!-- Section 6 -->
+     <!-- Section 7 -->
+     <div class="art-section">
+      <div class="art-header">
+        <h2>Final Fantasy Dissidia</h2>
+      </div>
+      <div class="art-display">
+        <!-- Row 1 -->
+        <div class="full-image loading-icon">
+          <img src="https://i.imgur.com/FvPFmVs.jpg">
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Section 8 -->
     <div class="art-section">
       <div class="art-header">
         <h2>Soulcalibur VI - Bandai Namco</h2>
@@ -133,7 +161,7 @@
       </div>
     </div>
 
-    <!-- Section 7 -->
+    <!-- Section 9 -->
     <div class="art-section">
       <div class="art-header">
         <h2>Metro: Exodus - Deep Silver</h2>
@@ -147,7 +175,7 @@
       </div>
     </div>
 
-    <!-- Section 8 -->
+    <!-- Section 10 -->
     <div class="art-section">
       <div class="art-header">
         <h2>Mega Man 11 - Capcom</h2>
@@ -160,7 +188,7 @@
       </div>
     </div>
 
-    <!-- Section 9 -->
+    <!-- Section 11 -->
     <div class="art-section">
       <div class="art-header">
         <h2>Gamer Days - Intel</h2>
@@ -172,7 +200,7 @@
       </div>
     </div>
 
-    <!-- Section 10 -->
+    <!-- Section 12 -->
     <div class="art-section">
       <div class="art-header">
         <h2>Marvel Figures - Hasbro</h2>
