--- a/strive-for-five.html
+++ b/strive-for-five.html
@@ -76,7 +76,7 @@
       <div class="art-display">
         <!-- Row 1 -->
         <div class="full-image loading-icon">
-          <img src="https://66.media.tumblr.com/e4f37fd7df8a99df9be962e2388d49e4/tumblr_pitsk0uLcD1tmp8rdo6_r2_1280.png">
+          <img src="https://66.media.tumblr.com/13a02afeafb4fa38b6981c4b2ac29be6/tumblr_pn73tiAN3l1tmp8rdo3_r2_1280.png">
         </div>
         <!-- Row 2 -->
         <div class="full-image loading-icon">
@@ -88,7 +88,7 @@
         </div>
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/BEMO8/bed486f3d0.mp4" type="video/mp4">
+            <source src="https://puu.sh/CWDI8/089718f154.mp4" type="video/mp4">
           </video>
         </div>
         <!-- Row 3 -->
