--- a/youtube.html
+++ b/youtube.html
@@ -86,6 +86,11 @@
           <img src="https://media.giphy.com/media/cArlRP5R1BDtH3ukt6/giphy.gif">
         </div>
         <!-- Row 5 -->
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/3b297911a362f27f4ce7020aea910304/tumblr_pmffnpw9Yx1vihf3to1_540.gif">
+        </div>
+
+
         <div class="art-sub-header">
           <p>Select outro commissions done for YouTubers.</p>
         </div>
