--- a/anime-omake.html
+++ b/anime-omake.html
@@ -80,7 +80,7 @@
         <!-- Row 1 -->
         <!-- Logo -->
         <div class="art-sub-header">
-          <p>Logo explorations.</p>
+          <p>Logo explorations. there was no set direction or a title yet so I played with lots of different styles using "Anime Show" as a placeholder.  After the first round, the stakeholders wanted to see more of the 'ribbon' look.</p>
         </div>
         <div class="full-image">
           <img src="img/ao-logo1.png">
@@ -108,7 +108,7 @@
         </div>
         <!-- Row 5 -->
         <div class="art-sub-header">
-          <p>Video wall that appears behind the hosts.
+          <p>Video wall that appears behind the hosts.  Stakeholders knew they wanted something purple and yellow and with anime items/symbols.
             All art was taken from episode screencaps or official art.
             No fanart was used.</p>
         </div>
