--- a/behind-the-cosplay.html
+++ b/behind-the-cosplay.html
@@ -105,7 +105,7 @@
           <p>Animated lower third video asset that was templatized for Video Team's usage.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/C2ihE/ef74b949d4.gif">
+          <img src="https://puu.sh/CWHno/dbf08e4a4d.gif">
         </div>
       </div>
       <hr>
