--- a/e3-booth.html
+++ b/e3-booth.html
@@ -53,7 +53,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>IGN Live at E3 - Booth Monitors</h2>
-        <p>Designed and animated IGN statistic videos to loop on IGN's vertical booth monitors at E3 2017.</p>
+        <p>Designed and animated IGN statistic videos to loop on IGN's vertical booth monitors at E3 2017.  I took a step back from IGN's usual 'red overlay over video game character' look and decided to use floating shapes for a more upbeat and fun vibe that would draw in eyes.</p>
         <br>
         <p><a class="active-link" target="_blank" href="http://studios.ign.com/review/E3_2017/monitor/ign/">View the full animation here.</a></p>
       </div>
@@ -82,7 +82,7 @@
     <!-- Section 2 -->
     <div class="art-section">
       <div class="art-header">
-        <p>To play alongside the stats videos, I created a Top 10 List animation that would show the top 10 E3 games of each console during the convention.
+        <p>To play alongside the stats videos, I created a Top 10 List animation that would show the top 10 E3 games of each console during the convention.  Colors were used to differentiate the categories and make certain categories more obvious when glancing over (PlayStaion blue and Xbox green).
           Each list was made into an easily editable template for on-site editors to adjust and render while keeping all animation untouched.
           Booth design done by <a class="active-link" target="_blank" href="https://lunarsaloon.com/">Lunar Saloon</a></p>
         <br>
