--- a/ads.html
+++ b/ads.html
@@ -179,7 +179,7 @@
         <div class="art-section">
             <div class="art-header">
               <h2>Snipes</h2>
-              <p>Snipes are branded video graphics that appear for a few seconds on the bottom left corner of a video to showcase who is sponsoring it.  Note that I cannot edit established branding, such as the red header.</p>
+              <p>Snipes are branded video graphics that appear for a few seconds on the bottom left corner of a video to showcase who is sponsoring it.  Note that I cannot edit established branding, such as the red header.  In rare cases, such as for new IGN shows, I can create a snipe template from scratch.</p>
             </div>
             <div class="art-display">
               <!--Row 1-->
