--- a/anime-omake.html
+++ b/anime-omake.html
@@ -74,54 +74,78 @@
       <hr>
     </div>
 
-    <!-- Section 2 -->
+    <!-- Video Wall-->
     <div class="art-section">
+        <h2>Video Wall and Desk Strip</h2>
       <div class="art-display">
         <!-- Row 1 -->
-        <!-- Logo -->
         <div class="art-sub-header">
-          <p>Logo explorations. there was no set direction or a title yet so I played with lots of different styles using "Anime Show" as a placeholder.  After the first round, the stakeholders wanted to see more of the 'ribbon' look.</p>
-        </div>
-        <div class="full-image">
-          <img src="img/ao-logo1.png">
-        </div>
-        <!-- Row 2 -->
-        <div class="full-image loading-icon">
-          <img src="img/ao-logo2.jpg">
-        </div>
-        <!-- Row 3 -->
-        <div class="art-sub-header">
-          <p>Finalized logo.</p>
+          <div class="full-image loading-icon">
+          <img src="https://78.media.tumblr.com/a5657092d06e9da3233895b6f6d5a57d/tumblr_pentg9IwJr1tmp8rdo1_r1_1280.png"></div><br>
+          <p>The first part was to establish a look and feel for the set, which meant designing the the video wall that appears behind the hosts and the desk strip in front of the hosts.  Stakeholders knew they wanted something purple and yellow and with either panels to represent manga or anime items/symbols with the potential to have these animate. </p>  <br> <p>Below are first drafts of my take on the manga/panel theme: </p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://66.media.tumblr.com/2ef4e2b215dd5f62f58dacb7eb664b5f/tumblr_pentg9IwJr1tmp8rdo4_r1_1280.png">
+          <img src="https://i.imgur.com/zzcE7HT.png">
         </div>
-        <!-- Row 4 -->
-        <!-- Set -->
-        <div class="art-sub-header">
-          <p>Animated intro with anime cuts and sponsor scene.</p>
-        </div>
+        <p>I found the above box layout to be too many things happening at once and not enough visual engagement for the viewer so I lessened the amount of boxes and made them more angular for more impact.</p>
         <div class="full-image loading-icon">
-          <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/BtxT8.mp4" type="video/mp4">
-          </video>
-        </div>
-        <!-- Row 5 -->
-        <div class="art-sub-header">
-          <p>Video wall that appears behind the hosts.  Stakeholders knew they wanted something purple and yellow and with anime items/symbols.
-            All art was taken from episode screencaps or official art.
-            No fanart was used.</p>
-        </div>
-        <div class="full-image loading-icon">
-          <img src="https://78.media.tumblr.com/a5657092d06e9da3233895b6f6d5a57d/tumblr_pentg9IwJr1tmp8rdo1_r1_1280.png">
-        </div>
+            <img src="https://i.imgur.com/ZCtQK0n.png">
+          </div>
+          <p>Style explorations on how to present the anime characters in the panel (keeping in mind these could be animated and stylized the same way in After Effects).</p>
+          <div class="art-display">
+              <!-- Row 1 -->
+              <div class="quarter-image loading-icon">
+                <img src="https://i.imgur.com/xysAUjA.png">
+              </div>
+              <div class="quarter-image loading-icon">
+                  <img src="https://i.imgur.com/kOX6DV2.png">
+                </div>
+                <div class="quarter-image loading-icon">
+                    <img src="https://i.imgur.com/tlGs14z.png">
+                  </div>
+                <div class="quarter-image loading-icon">
+                    <img src="https://i.imgur.com/5BkoXnc.jpg">
+                  </div>
+           <p>Panel color and style explorations:</p>
+          <div class="art-display">
+              <!-- Row 1 -->
+              <div class="half-image loading-icon">
+                <img src="https://i.imgur.com/H4kPDMK.png">
+              </div>
+              <div class="half-image loading-icon">
+                <img src="https://i.imgur.com/ky0qtVP.png">
+              </div>
+              <div class="half-image loading-icon">
+                  <img src="https://i.imgur.com/2F5Cewe.png">
+              </div>
+              <div class="half-image loading-icon">
+                  <img src="https://i.imgur.com/MRvlNuF.png">
+              </div>
+              <div class="half-image loading-icon">
+                  <img src="https://i.imgur.com/AeP7H8m.png">
+              </div>
+              <div class="half-image loading-icon">
+                  <img src="https://i.imgur.com/MCUWFsi.png">
+              </div>
+
+              <p>Next were first drafts for the anime objects/symbols theme:</p>
+          <div class="art-display">
+              <!-- Row 1 -->
+              <div class="full-image loading-icon">
+                <img src="https://i.imgur.com/4viTz3M.png">
+              </div>
+              <div class="full-image loading-icon">
+                  <img src="https://i.imgur.com/LimI1ht.png">
+                </div>
+
         <!-- Row 6 -->
+        <p>After feedback, stakeholders went with the patterned look as to evoke more anime and less manga. I masked out several more anime objects, darkened the purple, and placed them in a way that balanced space with items not overpowering eachother.  An orange halftone was added for some depth. All art was taken from episode screencaps or official art. No fanart was used.</p>
         <div class="full-image loading-icon">
           <img src="https://78.media.tumblr.com/7b8f40e9a17b796b36712fd3972b592d/tumblr_peah1mrEIV1tmp8rdo10_r1_1280.png">
         </div>
         <!-- Row 7 -->
         <div class="art-sub-header">
-          <p>Subtle animated version of the video wall that appears in episodes 3 and 4.</p>
+          <p>Animated version of the video wall that appears in episodes 3 and 4.  Objects move or shine.</p>
         </div>
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
@@ -130,14 +154,48 @@
         </div>
         <!-- Row 8 -->
         <div class="art-sub-header">
-            <p>Desk graphic with sponsor branding.</p>
+            <p>Once the video wall look was established, the desk graphic with sponsor branding could be made.</p>
         </div>
         <div class="full-image loading-icon">
           <img src="https://78.media.tumblr.com/2f79f44e27355726c9f09de39a248651/tumblr_pentg9IwJr1tmp8rdo3_r2_1280.png">
+                  
+
         </div>
-        <!-- Row 9 -->
+
+
+        <!-- Logo -->
+        <div class="art-sub-header">
+            <h2>Logo</h2>
+            <p>There was no title yet and not set direction on how it should look besides being yellow or purple so I played with lots of different styles using "Anime Show" as a placeholder.  After the first round, the stakeholders wanted to see more of the 'ribbon' look.</p>
+          </div>
+          <div class="full-image">
+            <img src="img/ao-logo1.png">
+          </div>
+          <!-- Row 2 -->
+          <div class="full-image loading-icon">
+            <img src="img/ao-logo2.jpg">
+          </div>
+          <!-- Row 3 -->
+          <div class="art-sub-header">
+            <p>Finalized logo.</p>
+          </div>
+          <div class="full-image loading-icon">
+            <img src="https://66.media.tumblr.com/2ef4e2b215dd5f62f58dacb7eb664b5f/tumblr_pentg9IwJr1tmp8rdo4_r1_1280.png">
+            <br>
+            <hr>
+          </div>
+
         <!-- Video graphics -->
         <div class="art-sub-header">
+          <h2>Video Graphics</h2>
+                    <p>Animated intro with anime cuts and sponsor scene.</p>
+                  </div>
+                  <div class="full-image loading-icon">
+                    <video width="100%" autoplay muted loop>
+                      <source src="https://puu.sh/CZuID/7d9e68d6ed.mp4" type="video/mp4">
+                    </video>
+                  </div>
+                  <div class="art-sub-header">
           <p>Transition animation for the video editors to use between scene changes.</p>
         </div>
         <div class="full-image loading-icon">
@@ -147,7 +205,7 @@
         </div>
         <!-- Row 10 -->
         <div class="art-sub-header">
-            <p>Animated snipe advertising the show's sponsor.</p>
+            <p>Animated snipe advertising the show's sponsor.  I used the ribbon theme that was explored during logo drafts.</p>
         </div>
         <div class="full-image loading-icon">  
           <video width="100%" autoplay muted loop>
@@ -166,6 +224,7 @@
         <!-- Row 12 -->
         <!-- Web graphics -->
         <div class="art-sub-header">
+            <h2>Web Graphics</h2>
           <p>Graphics for the Anime Omake show page and web graphics.</p>
         </div>
         <div></div>
