--- a/behind-the-cosplay.html
+++ b/behind-the-cosplay.html
@@ -79,7 +79,7 @@
       <div class="art-display">
         <!-- Row 1 -->
         <div class="art-sub-header">
-          <p>Logo animation based on the idea of stitching cosplay. Logo/title was designed by Matt Kruse.</p>
+          <p>Logo animation based on the idea of stitching cosplay together, and so the words sort of 'stitch' or manifest to convey that theme. Logo/title was designed by Matt Kruse.</p>
         </div>
         <div class="full-image loading-icon">
           <img src="https://puu.sh/C8fYq/b34e98ad32.gif">
