--- a/strive-for-five.html
+++ b/strive-for-five.html
@@ -70,8 +70,8 @@
     <!-- Section 2 -->
     <div class="art-section">
       <div class="art-header">
-        <p>Logo explorations (+background) following the themes of 'striving'.
-          First logo is based off the 5 Hour Energy branding and second logo is based off a more eSports feel.</p>
+        <p>Logo explorations (+background) following the themes of 'striving'.  I went for something bold and in-your-face, but kept the background light so the logo could do the talking.
+          First logo is based off the 5 Hour Energy branding and second logo is based off a more eSports feel..</p>
       </div>
       <div class="art-display">
         <!-- Row 1 -->
