--- a/suitingup.html
+++ b/suitingup.html
@@ -49,53 +49,46 @@
   </div>
 
   <div id="content">
-    <!-- Section 1 -->
+    <!-- Intro -->
     <div class="art-section">
-      <div class="art-header">
-        <h2>Suiting Up</h2>
-      </div>
-      <div class="art-display">
-        <!-- Row 1 -->
-        <div class="full-image loading-icon">
-          <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/5ac3d06388251b42df41d002/5af4914eaa4a994407f6c85d/1537982635363/btc_thumb.png?format=2500w">
-        </div>
-        <!-- Row 2 -->
         <div class="art-sub-header">
+            <h2>Suiting Up</h2>
           <p>Animated and designed video graphics for IGN's <i>Suiting Up</i>, a 4 episode miniseries centered around EA and Bioware's multiplayer action RPG game Anthem.</p>
           <br>  
           <p>Watch the first episode below:</p>
         </div>
         <div class="full-image loading-icon">
-          <div class="embed-container">
-            <iframe src="https://www.ign.com/videos/2019/02/13/suiting-up-creating-anthems-heroes-origin-stories-episode-1" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-          </div>
-        </div>        
-      </div>
+            <div class="embed-container">
+              <iframe src="https://www.youtube.com/embed/hTAay-kbob8" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            </div>     
+      </div><br>
       <hr>
     </div>
      
-    <!-- Section 2 -->
+    <!-- Process -->
     <div class="art-section">
+        <h2>Logo and Main Title Scene</h2>
       <div class="art-display">
         <!-- Row 1 -->
         <div class="art-sub-header">
-          <p>Early logo and title scene explorations</p>
+          <p>Since the client did not have any creative direction at the start of the project, the Sales Design and Video team decided to try out two different looks to present to the client: <b>A)</b> a mechanical, gritty, weathered down look <b>B)</b> a look inspired by futuristic HUD elements/interface.  I was tasked with the futuristic interface look.</p>
+          <br>
+          <p>Below are first drafts exploring a logo for the show. </p><br>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/C8fYq/b34e98ad32.gif">
+          <img src="https://i.imgur.com/Nl876Vf.png">
         </div>
         <!-- Row 2 -->
         <div class="art-sub-header">
-          <p>Two versions of lower thirds that are both used in the miniseries</p>
+          <p>Creating the HUD interface and seeing how it looked with the logo explorations.</p>
         </div>
         <div class="full-image loading-icon">
-          <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/CHNQJ.mp4" type="video/mp4">
-          </video>
+          <img src="https://i.imgur.com/JnVCCdh.png">
+          <img src="https://i.imgur.com/IFniawt.png">
         </div>
         <!-- Row 3 -->
         <div class="art-sub-header">
-          <p>Transition animation</p>
+          <p>Color change to match Anthem's orange more.</p>
         </div>
         <div class="full-image loading-icon">
           <img src="https://puu.sh/C8eqb.gif">
